--- a/PY/ML/3_regresion_logistica/notebook.ipynb
+++ b/PY/ML/3_regresion_logistica/notebook.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.7.6"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.7.6 64-bit (conda)",
+   "display_name": "Python 3.7.6 64-bit ('base': conda)",
    "metadata": {
     "interpreter": {
      "hash": "510dd6fa91319fddc5d79621a07358f04a8fa48e6ad602d55eaa17fc7a04de2d"
@@ -54,23 +54,23 @@
     "\n",
     "• $(Y = 0)$ OR $(Y = 1)$.\n",
     "\n",
-    "• En este sentido, nuestra hipótesis, $ 0 \\leq h_Θ(X) \\leq 1 $.\n",
+    "• En este sentido, nuestra hipótesis, $ 0 \\leq h_ \t\\theta (X) \\leq 1 $.\n",
     "\n",
     "Empezaremos con problemas de dos clases o de <b>clasificación binaria</b>. Entonces, ¿cómo se desarrolla un algoritmo de clasificación? A continuación, hallaremos un conjunto de entrenamiento para una tarea de clasificación sobre si un tumor es beligno o maligno. Observemos que si es benigno o no, adquiere únicamente dos valores, 0 de no y 1 de sí.\n",
     "\n",
     "<img src=\"3.png\"></img>\n",
     "\n",
-    "Anteriormente, habíamos mencionado que el clasificador $ 0 \\leq h_Θ(X) \\leq 1 $, por lo que nos gustaría una hipótesis que satisfaga esta propiedad, es decir, que estas predicciones estén entre cero y uno.\n",
+    "Anteriormente, habíamos mencionado que el clasificador $ 0 \\leq h_ \\theta (X) \\leq 1 $, por lo que nos gustaría una hipótesis que satisfaga esta propiedad, es decir, que estas predicciones estén entre cero y uno.\n",
     "\n",
-    "Cuando usábamos la regresión lineal, conocíamos nuestra hipótesis como $ h_Θ(X) $. Además, si nos ayudamos del álgebra lineal, podemos apreciar que, podemos expresar nuestra fórmula de la siguiente manera:\n",
+    "Cuando usábamos la regresión lineal, conocíamos nuestra hipótesis como $ h_ \\theta (X) $. Además, si nos ayudamos del álgebra lineal, podemos apreciar que, podemos expresar nuestra fórmula de la siguiente manera:\n",
     "\n",
-    "• Consideramos $ Θ^{T} $ nuestra matriz de parámetros Θs.\n",
+    "• Consideramos $ \\theta ^{T} $ nuestra matriz de parámetros Θs.\n",
     "\n",
     "• Además, $ X $ estaría compuesta por nuestras características.\n",
     "\n",
     "De esta forma, podemos expresar nuestra regresión lineal de forma acotada:\n",
     "\n",
-    "$ h_Θ(X) = Θ^{T}X $\n",
+    "$ h_ \\theta (X) = \\theta ^{T}X $\n",
     "\n",
     "En caso de no haber comprendido del todo el procedimiento, recomiendo leer [el siguiente artículo de Andrew NG sobre aprendizaje supervisado (aprox. pág. 3)](https://see.stanford.edu/materials/aimlcs229/cs229-notes1.pdf).\n",
     "\n",
@@ -84,7 +84,7 @@
     "\n",
     "• $(Y = 0)$ OR $(Y = 1)$.\n",
     "\n",
-    "• Hipótesis, $ 0 \\leq h_Θ(X) \\leq 1 $.\n",
+    "• Hipótesis, $ 0 \\leq h_ \\theta (X) \\leq 1 $.\n",
     "\n",
     "¿Por qué no utilizar la regresión lineal en vez de la regresión logística?\n",
     "\n",
@@ -96,9 +96,9 @@
     "\n",
     "Pero, ¿cómo haríamos para obtener, predicciones en valores discretos entre 0 y 1?Para ello, aplicaremos un umbral, de forma que dado los resultados del clasificador:\n",
     "\n",
-    "• Nuestra hipótesis definirá $ Y = 1 $ si nuestros resultados, son $ 0.5 \\leq h_Θ(X) $.\n",
+    "• Nuestra hipótesis definirá $ Y = 1 $ si nuestros resultados, son $ 0.5 \\leq h_ \\theta (X) $.\n",
     "\n",
-    "• De otra forma ($ 0.5 > h_Θ(X) $), nuestra hipótesis definirá $ Y = 0 $.\n",
+    "• De otra forma ($ 0.5 > h_ \\theta (X) $), nuestra hipótesis definirá $ Y = 0 $.\n",
     "\n",
     "Pareciera que la regresión lineal está realizando algo razonable, a pesar se trata de una tarea de clasificación. Sin embargo, cambiemos un poco el problema.\n",
     "\n",
@@ -118,41 +118,41 @@
     "\n",
     "Donde:\n",
     "\n",
-    "• $ Θ^{T} $ definía nuestro vector de parámetros.\n",
+    "• $ \\theta ^{T} $ definía nuestro vector de parámetros.\n",
     "\n",
     "• $ X $ definía nuestro vector de características (variables).\n",
     "\n",
-    "• $ h_Θ(X) $ es nuestra hipótesis.\n",
+    "• $ h_ \\theta (X) $ es nuestra hipótesis.\n",
     "\n",
-    "Para la regresión logística modificaremos levemente la hipótesis de la regresión lineal $ h_Θ(X) = Θ^{T}X $, de forma que $ h_Θ(X) \\in [0, 1] $, por lo que la definiremos de la siguiente forma:\n",
+    "Para la regresión logística modificaremos levemente la hipótesis de la regresión lineal $ h_ \\theta (X) = \\theta ^{T}X $, de forma que $ h_ \\theta (X) \\in [0, 1] $, por lo que la definiremos de la siguiente forma:\n",
     "\n",
-    "- Regresión lineal: $ h_Θ(X) = Θ^{T}X $.\n",
+    "- Regresión lineal: $ h_ \\theta (X) = \\theta ^{T}X $.\n",
     "\n",
-    "- Regresión logística: $ h_Θ(X) = g(Θ^{T}X) $.\n",
+    "- Regresión logística: $ h_ \\theta (X) = g( \\theta ^{T}X) $.\n",
     "\n",
-    "De esta forma, definimos la regresión logística a través de una composición de funciones (combinación en palabras simples), dado que, la función $ h_Θ(X) $ está definida en otra función $ g(Θ^{T}X) $. \n",
+    "De esta forma, definimos la regresión logística a través de una composición de funciones (combinación en palabras simples), dado que, la función $ h_ \\theta (X) $ está definida en otra función $ g( \\theta ^{T}X) $. \n",
     "\n",
     "Dado que en el Machine Learning tiende a acotarse la nomenclatura para que sea conveniente de escribir en código (y más eficiente a través de matrices), definiremos otra abreviatura a través de la nueva introducida hipótesis:\n",
     "\n",
-    "- Siendo $ h_Θ(X) = g(Θ^{T}X) $, definimos $ Z = Θ^{T}X $, de forma que, $ h_Θ(X) = g(Z) $. ¿Más simple, no?\n",
+    "- Siendo $ h_ \\theta (X) = g( \\theta ^{T}X) $, definimos $ Z =  \\theta ^{T}X $, de forma que, $ h_ \\theta (X) = g(Z) $. ¿Más simple, no?\n",
     "\n",
     "Bien. Hasta ahora, hemos hablado de composición de funciones, nomenclatura... Pero, ¿qué función es en verdad $ g(Z) $?\n",
     "\n",
-    "- Definimos la regresión logística o sigmoidea como $ h_Θ(X) = g(Z) $, donde $ g(Z) = \\frac{1}{1+e^{-z}} $ y $ Z = Θ^{T}X $, por lo que $ g(Θ^{T}X) = \\frac{1}{1+e^{-Θ^{T}X}} $.\n",
+    "- Definimos la regresión logística o sigmoidea como $ h_ \\theta (X) = g(Z) $, donde $ g(Z) = \\frac{1}{1+e^{-z}} $ y $ Z = \\theta ^{T}X $, por lo que $ g( \\theta ^{T}X) = \\frac{1}{1+e^{- \\theta ^{T}X}} $.\n",
     "\n",
     "Gracias a un fragmento de Wikipedia, así se ve el gráfico de la función de la hipótesis (azul) con su derivada (línea roja).\n",
     "\n",
     "<img src=\"6.png\"></img>\n",
     "\n",
-    "- La función sigmoidea tiene dos asíntotas. Mientras $ Z $ va hacia menos infinito, $ g(Z) $ se aproxima a cero y mientras $ g(Z) $ tiende a infinito $ Z $ se aproxima a uno. Es decir, $ g(Z) $ ofrece valores que están entre 0 y 1 pero también tenemos que $ h_Θ(X) $ debe estar entre 0 y 1.\n",
+    "- La función sigmoidea tiene dos asíntotas. Mientras $ Z $ va hacia menos infinito, $ g(Z) $ se aproxima a cero y mientras $ g(Z) $ tiende a infinito $ Z $ se aproxima a uno. Es decir, $ g(Z) $ ofrece valores que están entre 0 y 1 pero también tenemos que $ h_ \\theta (X) $ debe estar entre 0 y 1.\n",
     "\n",
-    "- Como antes, lo que debemos hacer es ajustar los parámetros $ Θ $ a nuestros datos. Así que dado un conjunto de entrenamiento, necesitamos elegir un valor para los parámetros $ Θ $ y esta hipótesis nos permitirá hacer predicciones. \n",
+    "- Como antes, lo que debemos hacer es ajustar los parámetros $ Θ $ a nuestros datos. Así que dado un conjunto de entrenamiento, necesitamos elegir un valor para los parámetros $ \\theta $ y esta hipótesis nos permitirá hacer predicciones. \n",
     "\n",
-    "- Hablaremos del algoritmo de aprendizaje más adelante respecto al ajuste de los parámetros $ Θ $, mientras tanto, consideraremos la interpretación del modelo. Es decir, cómo se interpreta el resultado de la hipótesis $ h_Θ(X) $.\n",
+    "- Hablaremos del algoritmo de aprendizaje más adelante respecto al ajuste de los parámetros $ \\theta $, mientras tanto, consideraremos la interpretación del modelo. Es decir, cómo se interpreta el resultado de la hipótesis $ h_ \\theta (X) $.\n",
     "\n",
-    "- La interpretación de la salida de la hipótesis se entiende a partir de $ h_Θ(X) = probabilidad $, donde la $ probabilidad $ es la prob. estimada que $ y = 1 $ en el ejemplo de entrada de $ X $.\n",
+    "- La interpretación de la salida de la hipótesis se entiende a partir de $ h_ \\theta (X) = probabilidad $, donde la $ probabilidad $ es la prob. estimada que $ y = 1 $ en el ejemplo de entrada de $ X $.\n",
     "\n",
-    "Si suponemos que, $ h_Θ(X) = probabilidad de vender una casa $, siendo  $ X = [X_{0}, X_{1}] = [1, tamañoCasa] $, donde, tras introducir la variable en la hipótesis, nos arroja la <i>probabilidad de vender una casa</i> igual a $ h_Θ(X) = 0.7 $, entonces la hipótesis estará prediciendo que existe una probabilidad del 70% de que se venda una casa dado el tamaño de la misma.\n",
+    "Si suponemos que, $ h_ \\theta (X) = probabilidad de vender una casa $, siendo  $ X = [X_{0}, X_{1}] = [1, tamañoCasa] $, donde, tras introducir la variable en la hipótesis, nos arroja la <i>probabilidad de vender una casa</i> igual a $ h_ \\theta (X) = 0.7 $, entonces la hipótesis estará prediciendo que existe una probabilidad del 70% de que se venda una casa dado el tamaño de la misma.\n",
     "\n",
     "En probabilidad, ésto se entiende:\n",
     "\n",
@@ -160,7 +160,7 @@
     "\n",
     "Donde:\n",
     "\n",
-    "- Entendemos $ Y \\in [0, 1] $, siendo $ Y $ la probabilidad de que se venda la casa ($ Y = 1 $), dado que \"X\" tiene un tamaño particular, siendo esta probabilidad parametrizada por Θ.\n",
+    "- Entendemos $ Y \\in [0, 1] $, siendo $ Y $ la probabilidad de que se venda la casa ($ Y = 1 $), dado que \"X\" tiene un tamaño particular, siendo esta probabilidad parametrizada por $ \\theta $.\n",
     "\n",
     "- La hipótesis nos dará las estimaciones de la probabilidad de que $ Y = 1 $.\n",
     "\n",
@@ -180,20 +180,20 @@
     "\n",
     "Para recapitular, recordemos lo que establecimos como hipótesis:\n",
     "\n",
-    "- Siendo $ h_Θ(X) = g(Θ^{T}X) $, definimos $ Z = Θ^{T}X $, de forma que, $ h_Θ(X) = g(Z) $.\n",
+    "- Siendo $ h_ \\theta (X) = g( \\theta ^{T}X) $, definimos $ Z = \\theta ^{T}X $, de forma que, $ h_ \\theta (X) = g(Z) $.\n",
     "\n",
-    "- Definimos la regresión logística o sigmoidea como $ h_Θ(X) = g(Z) $, donde $ g(Z) = \\frac{1}{1+e^{-z}} $ y $ Z = Θ^{T}X $, por lo que $ g(Θ^{T}X) = \\frac{1}{1+e^{-Θ^{T}X}} $.\n",
+    "- Definimos la regresión logística o sigmoidea como $ h_ \\theta (X) = g(Z) $, donde $ g(Z) = \\frac{1}{1+e^{-z}} $ y $ Z = \\theta ^{T}X $, por lo que $ g( \\theta ^{T}X) = \\frac{1}{1+e^{- \\theta ^{T}X}} $.\n",
     "\n",
-    "Concretamente, esta hipótesis, está dando estimaciones de la probabilidad de que $ Y = 1 $, dado X y parametrizado por Θ, por lo que, si quisiéramos predecir si $ Y = 1 $ o $ Y = 0 $, lo que deberíamos hacer sería:\n",
+    "Concretamente, esta hipótesis, está dando estimaciones de la probabilidad de que $ Y = 1 $, dado X y parametrizado por $ \\theta $, por lo que, si quisiéramos predecir si $ Y = 1 $ o $ Y = 0 $, lo que deberíamos hacer sería:\n",
     "\n",
     "- Suponer predicción de que $ Y = 1 $ solo si \n",
-    "$ 0.5 \\leq h_Θ(X) $.\n",
+    "$ 0.5 \\leq h_ \\theta (X) $.\n",
     "\n",
-    "- De otra forma, suponemos $ Y = 0 $ solo si $ 0.5 > h_Θ(X) $.\n",
+    "- De otra forma, suponemos $ Y = 0 $ solo si $ 0.5 > h_ \\theta (X) $.\n",
     "\n",
     "Es decir, siempre que la hipótesis da como resultado la probabilidad de que $ Y = 1 $ es debido a que la probabilidad de que $ Y = 1 $ es mayor o igual al 50% según nuestra hipótesis (hay más probabilidades de que $ Y = 1 $ de que $ Y = 0 $). De lo contrario, si la probabilidad estimada de que $ Y = 1 $ es menor al 50%, entonces vamos a predecir que $ Y = 0 $.\n",
     "\n",
-    "Ahora, ¿cómo vemos ésto en la gráfica? ¿Con qué valores de $ Z $ ($ Θ^{T}X $) obtendremos determinados valores para $ Y $?\n",
+    "Ahora, ¿cómo vemos ésto en la gráfica? ¿Con qué valores de $ Z $ ($ \\theta ^{T}X $) obtendremos determinados valores para $ Y $?\n",
     "\n",
     "<img src=\"9.png\"></img>\n",
     "\n",
@@ -201,11 +201,11 @@
     "\n",
     "- Es decir, siempre que $ 0 \\leq Z $, tendremos que $ 0.5 \\leq g(Z) $.\n",
     "\n",
-    "Dado que, en la hipótesis, definimos $ Z = Θ^{T}X $, entonces este término debe ser mayor o igual a 0 en orden para que $ g(Z) $ sea mayor o igual a 0.5:\n",
+    "Dado que, en la hipótesis, definimos $ Z = \\theta ^{T}X $, entonces este término debe ser mayor o igual a 0 en orden para que $ g(Z) $ sea mayor o igual a 0.5:\n",
     "\n",
-    "- De esta forma, $ 0.5 \\leq g(Z) $ siempre que $ 0 \\leq Z $, por lo que $ 0.5 \\leq g(Θ^{T}X) $, por lo que $ 0 \\leq Θ^{T}X $.\n",
+    "- De esta forma, $ 0.5 \\leq g(Z) $ siempre que $ 0 \\leq Z $, por lo que $ 0.5 \\leq g( \\theta ^{T}X) $, por lo que $ 0 \\leq \\theta ^{T}X $.\n",
     "\n",
-    "Lo anterior es un simple reemplazo asumiendo que $ Z = Θ^{T}X $.\n",
+    "Lo anterior es un simple reemplazo asumiendo que $ Z = \\theta ^{T}X $.\n",
     "\n",
     "En resumen, y para terminar majaderamente con estas definiciones:\n",
     "\n",
@@ -222,15 +222,15 @@
     "\n",
     "Suponiendo que, a través de un procedimiento especificado, terminamos con los siguientes valores para los parámetros:\n",
     "\n",
-    "- Es decir, $ Θ = [Θ_{0}, Θ_{1}, Θ_{2}] = [-3, 1, 1] $ (recordemos $ Θ_{0} $ es el bias).\n",
+    "- Es decir, $ \\theta = [ \\theta _{0}, \\theta _{1}, \\theta _{2}] = [-3, 1, 1] $ (recordemos $ \\theta _{0} $ es el bias).\n",
     "\n",
     "Entonces, al tener esta elección de parámetros, intentemos averiguar donde una hipótesis terminará prediciendo que $ Y = 1 $ y donde predeciría que $ Y = 0 $. Pues, usando las fórmulas anteriormente mencionadas:\n",
     "\n",
     "- Sabemos que nuestra hipótesis predicirá $ Y = 1 $ solo si $ 0.5 \\leq g(Z) $.\n",
     "\n",
-    "Al tener  $ Θ = [Θ_{0}, Θ_{1}, Θ_{2}] = [-3, 1, 1] $, y realizando la múltiplicación de Θ^{T} por X:\n",
+    "Al tener  $ \\theta = [ \\theta _{0}, \\theta _{1}, \\theta _{2}] = [-3, 1, 1] $, y realizando la múltiplicación de $ \\theta ^{T} $ por X:\n",
     "\n",
-    "- Al ser $ Θ^{T} $ una matriz de 1 x 3 y X una matriz de 3 x 1, es posible realizar el producto punto. He allí el por qué se transpone Θ.\n",
+    "- Al ser $ \\theta ^{T} $ una matriz de 1 x 3 y X una matriz de 3 x 1, es posible realizar el producto punto. He allí el por qué se transpone Θ.\n",
     "\n",
     "Obtenemos que:\n",
     "\n",
@@ -298,7 +298,7 @@
     "\n",
     "• El círculo amarillo representaría una función análoga del cuerpo de una neurona (los cálculos sobre los input que darán un output).\n",
     "\n",
-    "• Nuestro resultado, $ h_Θ(x) $, vendría siendo el output gracias al axón (en analogía biológica).\n",
+    "• Nuestro resultado, $ h_ \\theta (x) $, vendría siendo el output gracias al axón (en analogía biológica).\n",
     "\n",
     "<img src=\"16.png\"></img>\n"
    ],
