--- a/PY/ML/3_regresion_logistica/notebook.ipynb
+++ b/PY/ML/3_regresion_logistica/notebook.ipynb
@@ -64,7 +64,7 @@
     "\n",
     "Cuando usábamos la regresión lineal, conocíamos nuestra hipótesis como $ h_ \\theta (X) $. Además, si nos ayudamos del álgebra lineal, podemos apreciar que, podemos expresar nuestra fórmula de la siguiente manera:\n",
     "\n",
-    "• Consideramos $ \\theta ^{T} $ nuestra matriz de parámetros Θs.\n",
+    "• Consideramos $ \\theta ^{T} $ nuestra matriz de parámetros $ \\theta $s.\n",
     "\n",
     "• Además, $ X $ estaría compuesta por nuestras características.\n",
     "\n",
@@ -146,7 +146,7 @@
     "\n",
     "- La función sigmoidea tiene dos asíntotas. Mientras $ Z $ va hacia menos infinito, $ g(Z) $ se aproxima a cero y mientras $ g(Z) $ tiende a infinito $ Z $ se aproxima a uno. Es decir, $ g(Z) $ ofrece valores que están entre 0 y 1 pero también tenemos que $ h_ \\theta (X) $ debe estar entre 0 y 1.\n",
     "\n",
-    "- Como antes, lo que debemos hacer es ajustar los parámetros $ Θ $ a nuestros datos. Así que dado un conjunto de entrenamiento, necesitamos elegir un valor para los parámetros $ \\theta $ y esta hipótesis nos permitirá hacer predicciones. \n",
+    "- Como antes, lo que debemos hacer es ajustar los parámetros $ \\theta $ a nuestros datos. Así que dado un conjunto de entrenamiento, necesitamos elegir un valor para los parámetros $ \\theta $ y esta hipótesis nos permitirá hacer predicciones. \n",
     "\n",
     "- Hablaremos del algoritmo de aprendizaje más adelante respecto al ajuste de los parámetros $ \\theta $, mientras tanto, consideraremos la interpretación del modelo. Es decir, cómo se interpreta el resultado de la hipótesis $ h_ \\theta (X) $.\n",
     "\n",
@@ -230,7 +230,7 @@
     "\n",
     "Al tener  $ \\theta = [ \\theta _{0}, \\theta _{1}, \\theta _{2}] = [-3, 1, 1] $, y realizando la múltiplicación de $ \\theta ^{T} $ por X:\n",
     "\n",
-    "- Al ser $ \\theta ^{T} $ una matriz de 1 x 3 y X una matriz de 3 x 1, es posible realizar el producto punto. He allí el por qué se transpone Θ.\n",
+    "- Al ser $ \\theta ^{T} $ una matriz de 1 x 3 y X una matriz de 3 x 1, es posible realizar el producto punto. He allí el por qué se transpone $ \\theta $.\n",
     "\n",
     "Obtenemos que:\n",
     "\n",
