--- a/PY/ML/3_regresion_logistica/notebook.ipynb
+++ b/PY/ML/3_regresion_logistica/notebook.ipynb
@@ -28,13 +28,13 @@
  "cells": [
   {
    "source": [
-    "# Regresión logística y redes neuronales\n",
+    "# Regresión logística\n",
     "\n",
     "<img src=\"1.png\"></img>\n",
     "\n",
-    "~ Basado en el video de <b>DOT.CSV</b>: [Redes Neuronales](https://www.youtube.com/watch?v=W8AeOXa_FqU) y curso de Machine Learning de la Universidad de Standford, de Andrew Ng.\n",
+    "~ Basado en el video de <b>codebasics</b>: [Logistic Regression](https://www.youtube.com/watch?v=zM4VZR0px8E) y curso de Machine Learning de la Universidad de Standford, de Andrew Ng.\n",
     "\n",
-    "~ Imágenes extraídas desde el curso de Andrew NG de Coursera (Machine Learning de Standford University), canal de YouTube de DOT.CSV, Wikipedia, Slideshare, entre otros.\n",
+    "~ Imágenes extraídas desde el curso de Andrew NG de Coursera (Machine Learning de Standford University), canal de YouTube de DOT.CSV, Wikipedia, Slideshare, Statdeveloper, entre otros.\n",
     "\n",
     "~ Recomendado saber sobre cursos de cálculo de universidad (cálculo I, II y III), programación, álgebra y estadística.\n",
     "\n",
@@ -44,9 +44,9 @@
     "\n",
     "• Se explicarán los problemas de clasificación.\n",
     "\n",
-    "• Tengo muchísimo material sobre redes neuronales.\n",
+    "• Tengo muchísimo material de regresión logística.\n",
     "\n",
-    "Bueno, antes de iniciar de lleno con redes neuronales, debemos aprender y comprender lo que son los problemas de clasificación, dado que con ellos, seremos capaces de categorizar y utilizar clases, trabajando con datos discretos.\n",
+    "Bueno, antes de iniciar de lleno con redes neuronales (en el próximo notebook), debemos aprender y comprender lo que son los problemas de clasificación, dado que con ellos, seremos capaces de categorizar y utilizar clases, trabajando con datos discretos.\n",
     "\n",
     "## (1) Problemas de clasificación\n",
     "\n",
@@ -152,7 +152,7 @@
     "\n",
     "- La interpretación de la salida de la hipótesis se entiende a partir de $ h_ \\theta (X) = probabilidad $, donde la $ probabilidad $ es la prob. estimada que $ y = 1 $ en el ejemplo de entrada de $ X $.\n",
     "\n",
-    "Si suponemos que, $ h_ \\theta (X) = probabilidad de vender una casa $, siendo  $ X = [X_{0}, X_{1}] = [1, tamañoCasa] $, donde, tras introducir la variable en la hipótesis, nos arroja la <i>probabilidad de vender una casa</i> igual a $ h_ \\theta (X) = 0.7 $, entonces la hipótesis estará prediciendo que existe una probabilidad del 70% de que se venda una casa dado el tamaño de la misma.\n",
+    "Si suponemos que, $ h_ \\theta (X) = probabilidad $, siendo  $ X = [X_{0}, X_{1}] = [1, tamañoCasa] $, donde, tras introducir la variable en la hipótesis, nos arroja la <i>probabilidad de vender una casa</i> igual a $ h_ \\theta (X) = 0.7 $, entonces la hipótesis estará prediciendo que existe una probabilidad del 70% de que se venda una casa dado el tamaño de la misma.\n",
     "\n",
     "En probabilidad, ésto se entiende:\n",
     "\n",
@@ -268,39 +268,7 @@
   },
   {
    "source": [
-    "## (2) Redes neuronales\n",
-    "\n",
-    "Las redes neuronales fueron desarrolladas como simulación de las neuronas o de las redes de neuronas en el cerebro. \n",
-    "\n",
-    "## Neuronas\n",
-    "\n",
-    "<img src=\"15.png\"></img>\n",
-    "\n",
-    "Las neuronas - <i>como la que está adjunta en la imagen</i> -, son una perfecta analogía para entender la representación de la hipótesis de las redes neuronales.\n",
-    "\n",
-    "Las primeras cosas que llaman la atención es que, las neuronas, tienen un cuerpo celular morado, con ramificaciones, llamadas \"dentritas\". Estas dentritas son similares a nuestras entradas de la función, 'inputs' o X (características).\n",
-    "\n",
-    "Además, estos cables de entrada reciben inputs de otras ubicaciones.\n",
-    "\n",
-    "Finalmente, tenemos que estos cables de entrada se conectan a un cable de salida, denominado axón, cuya función es enviar señales a otras neuronas. Este 'output' vendría siendo nuestras salidas 'h(x)'.\n",
-    "\n",
-    "Cobra sentido, ¿no parece?\n",
-    "\n",
-    "## Unidad computacional\n",
-    "\n",
-    "En analogía a las neuronas biológicas, y en un nivel simple, una neurona es una <b>unidad computacional</b> que tiene un número de entradas. Es, a través de estos cables de entrada, que se reciben características con las cuales se realizan algunos cálculos, y luego, se envían estos resultados mediante su axón (output) a otros nodos o a otras neuronas del cerebro.\n",
-    "\n",
-    "## Red neuronal artificial: unidad de logística\n",
-    "\n",
-    "En una red neuronal artificial, lo que implementamos en una computadora es un modelo muy simple respecto a lo que realizan las neuronas biológicas.\n",
-    "\n",
-    "Modelaremos una neurona como una unidad logística. Así que, en el caso de la representación del modelo:\n",
-    "\n",
-    "• El círculo amarillo representaría una función análoga del cuerpo de una neurona (los cálculos sobre los input que darán un output).\n",
-    "\n",
-    "• Nuestro resultado, $ h_ \\theta (x) $, vendría siendo el output gracias al axón (en analogía biológica).\n",
-    "\n",
-    "<img src=\"16.png\"></img>\n"
+    "\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
