--- a/PY/ML/3_regresion_logistica/notebook.ipynb
+++ b/PY/ML/3_regresion_logistica/notebook.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "Bueno, antes de iniciar de lleno con redes neuronales (en el próximo notebook), debemos aprender y comprender lo que son los problemas de clasificación, dado que con ellos, seremos capaces de categorizar y utilizar clases, trabajando con datos discretos.\n",
     "\n",
-    "## (1) Problemas de clasificación\n",
+    "## Problemas de clasificación\n",
     "\n",
     "Los problemas de clasificación implican predecir una variable que tiene valores discretos. Esto implica que nuestro output tendrá un carácter booleano:\n",
     "\n",
@@ -152,7 +152,7 @@
     "\n",
     "- La interpretación de la salida de la hipótesis se entiende a partir de $ h_ \\theta (X) = probabilidad $, donde la $ probabilidad $ es la prob. estimada que $ y = 1 $ en el ejemplo de entrada de $ X $.\n",
     "\n",
-    "Si suponemos que, $ h_ \\theta (X) = probabilidad $, siendo  $ X = [X_{0}, X_{1}] = [1, tamañoCasa] $, donde, tras introducir la variable en la hipótesis, nos arroja la <i>probabilidad de vender una casa</i> igual a $ h_ \\theta (X) = 0.7 $, entonces la hipótesis estará prediciendo que existe una probabilidad del 70% de que se venda una casa dado el tamaño de la misma.\n",
+    "Si suponemos que, $ h_ \\theta (X) = probabilidad $, siendo  $ X = [ X_{0}, X_{1} ] = [1, houseSize] $, donde, tras introducir la variable en la hipótesis, nos arroja la <i>probabilidad de vender una casa</i> igual a $ h_ \\theta (X) = 0.7 $, entonces la hipótesis estará prediciendo que existe una probabilidad del 70% de que se venda una casa dado el tamaño de la misma.\n",
     "\n",
     "En probabilidad, ésto se entiende:\n",
     "\n",
