--- a/PY/ML/3_regresion_logistica/notebook.ipynb
+++ b/PY/ML/3_regresion_logistica/notebook.ipynb
@@ -168,7 +168,7 @@
     "\n",
     "<img src=\"8.jpg\"></img>\n",
     "\n",
-    "<i>Extraído desde [https://es.slideshare.net/RichardHuamanDurand/estadistica-y-probabilidades-cap-vi2](Slideshare)</i>.\n",
+    "<i>Extraído desde</i> [https://es.slideshare.net/RichardHuamanDurand/estadistica-y-probabilidades-cap-vi2](Slideshare).\n",
     "\n",
     "De esta forma, podemos obtener las probabilidades de que $ Y = 0 $ o bien, $ Y = 1 $ con simples despejes.\n",
     "\n",
