--- a/SQL/notebook.ipynb
+++ b/SQL/notebook.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importamos la librería sqlalchemy, que nos permite ejecutar código SQL adaptado a sintaxSSis simple y de forma Pythonica\n",
+    "# Importamos la librería sqlalchemy, que nos permite ejecutar código SQL adaptado a sintaxis simple y de forma Pythonica\n",
     "import sqlalchemy\n",
     "\n",
     "# Cargamos el módulo sqlite\n",
