--- a/PY/ML/3_regresion_logistica/notebook.ipynb
+++ b/PY/ML/3_regresion_logistica/notebook.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "Bueno, antes de iniciar de lleno con redes neuronales (en el próximo notebook), debemos aprender y comprender lo que son los problemas de clasificación, dado que con ellos, seremos capaces de categorizar y utilizar clases, trabajando con datos discretos.\n",
     "\n",
-    "## Problemas de clasificación\n",
+    "## (1) Problemas de clasificación\n",
     "\n",
     "Los problemas de clasificación implican predecir una variable que tiene valores discretos. Esto implica que nuestro output tendrá un carácter booleano:\n",
     "\n",
@@ -261,20 +261,164 @@
     "Recordemos que el vector de características son los coeficientes que acompañan a las variables independientes, que, una vez evaluadas, nos resultará en la variable dependiente Y, de modo que, anteriormente, en la regresión lineal, lo que se realizaba era construir una función que cada vez se acercara más al fenónemo (recorrido de los datos), de modo que, introduciendo nuestros conjuntos de entrenamiento de entrada, nos produzcan con menor error posible la salida real de dicho conjunto de entrenamiento.\n",
     "\n",
     "## Límites de decisión no lineales\n",
-    "\n"
+    "\n",
+    "Veamos ahora un ejemplo más complejo, donde, como de costumbre, tenemos \"X\" para los ejemplos positivos y \"O\" para denotar los ejemplos negativos. \n",
+    "\n",
+    "Dado un conjunto de entrenamiento como el siguiente, ¿cómo obtenemos una hipótesis que se ajuste a este tipo de datos con regresión logística? ¿Un spoiler? Sí, una circunferencia sería útil.\n",
+    "\n",
+    "<img src=\"13.png\"></img>\n",
+    "\n",
+    "Es decir, veremos los límites de decisión no lineales. \n",
+    "\n",
+    "Anteriormente, cuando introducimos la regresión lineal, la introducimos de forma bastante simplificada. Sin embargo, y como hemos mencionado, los problemas del mundo real tienden a tener un gran número de variables, y es allí, cuando se utiliza la regresión lineal multivariable (con tres o más variables).\n",
+    "\n",
+    "En este sentido, y en la regresión logística, podemos aplicar lo mismo, de forma de tener términos polinómicos de orden superior que se ajusten al recorrido de los datos.\n",
+    "\n",
+    "- Un ejemplo conveniente de hipótesis sería $ h_ \\theta (X) = g( \\theta _{0} + \\theta _{1}X_{1} + \\theta _{2}X_{2} + \\theta _{3}X_{1}^{2} + \\theta _{4}X_{2}^{2})  $.\n",
+    "\n",
+    "Digamos que la hipótesis es el \"ejemplo conveniente\", donde agregamos dos características adicionales, $ X_{1}^2 $ y $ X_{2}^2 $. De esta forma, tenemos cinco parámetros $ \\theta = [ \\theta _{0} , \\theta _{1} , \\theta _{2} , \\theta _{3} , \\theta _{4} ] $. Tal como dijimos, más adelante veremos cómo ajustar estos parámetros automáticamente.\n",
+    "\n",
+    "Digamos que el procedimiento de ajuste de los $ \\theta = [ \\theta _{0} , \\theta _{1} , \\theta _{2} , \\theta _{3} , \\theta _{4} ] $ terminó eligiendo los siguientes valores:\n",
+    "\n",
+    "- Ajuste $ \\theta = [ \\theta _{0} , \\theta _{1} , \\theta _{2} , \\theta _{3} , \\theta _{4} ] = [-1, 0, 0, 1, 1] $.\n",
+    "\n",
+    "Ésto significa que, esta elección particular de parámetros, predice que $ Y = 1 $ siempre que:\n",
+    "\n",
+    "- Se predice $ Y = 1 $ si y solo si $ 0.5 \\leq g(Z) $. La única forma en que ésto suceda es que Z no sea un número negativo, de otra forma, en la función sigmoide el denominador incrementará, produciendo que converga a 0. Dicho de otra forma, necesitamos que $ 0 \\leq Z $.\n",
+    "\n",
+    "Resolviendo la inecuación, llegamos a que:\n",
+    "\n",
+    "- Se predice $ Y = 1 $ si y solo si $ 0 \\leq -1 + X_{1}^{2} + X_{2}^{2}) $, que despejando  $ 1 \\leq + X_{1}^{2} + X_{2}^{2}) $. Recordemos $ X_{0} = 1 $ (bias).\n",
+    "\n",
+    "De acuerdo a la inecuación, nuestro límite de decisión se vería de la siguiente manera:\n",
+    "\n",
+    "<img src=\"14.png\"></img>\n",
+    "\n",
+    "Viéndose como una circunferencia, de forma que, todo fuera del círculo se predecirá como $ Y = 1 $ mientras, lo que está adentro como $ Y = 0 $ (recordemos, X para ejemplos positivos y O para negativos).\n",
+    "\n",
+    "Así que, al agregar estos términos más complejos, se pueden obtener límites de decisión aún más complejos.\n",
+    "\n",
+    "Una vez más, el límite de decisión es una propiedad de la hipótesis bajo los parámetros, y no del conjunto de entrenamiento, por lo que:\n",
+    "\n",
+    "- El vector de parámetros $ \\theta $ siempre definirán el límite de decisión.\n",
+    "\n",
+    "Sin embargo, lo que utilizamos para definir este límite de decisión, esta propiedad de los parámetros, es el conjunto de entrenamiento.\n",
+    "\n",
+    "Al tener términos polinómicos de mayor grado, es posible obtener límites de decisión aún más complejos, y la regresión puede ser utilizada para límites de decisión como elipses, u otras formas extravagantes que se ajusten a las nubes de datos.\n",
+    "\n",
+    "<img src=\"15.jpg\"></img>"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "\n"
+    "## (2) La función de costo para la regresión logística\n",
+    "\n",
+    "Finalmente, ¿cómo ajustamos los parámetros para $ \\theta $ para la regresión logística?\n",
+    "\n",
+    "Para ello, debemos definir nuestra función objetivo: minimizar el costo a través de la modificación de los parámetros.\n",
+    "\n",
+    "<img src=\"16.png\"></img>\n",
+    "\n",
+    "En la imagen, tenemos el problema de aprendizaje supervisado para ajustar la regresión logística al modelo:\n",
+    "\n",
+    "<img src=\"17.png\"></img>\n",
+    "\n",
+    "- Representamos el conjunto de entrenamiento con m ejemplos.\n",
+    "\n",
+    "- El vector de ejemplos X es representado por n + 1 dimensiones.\n",
+    "\n",
+    "- La primera característica es simple igual a 1 (el bias).\n",
+    "\n",
+    "- Al tener un problema de clasificación, $ Y = 0 $ o $ Y = 1 $.\n",
+    "\n",
+    "## Nota\n",
+    "\n",
+    "Si no se entiende por qué $ m $ y $ n $:\n",
+    "\n",
+    "- Pues, $ m $ refiere al número de filas, o al número de observaciones.\n",
+    "\n",
+    "- Por otro lado, la cantidad de características son de $ n $ columnas.\n",
+    "\n",
+    "- Al vector de parámetros tener todas las características más, un parámetro adicional, que lo llamamos bias, tiene $ n + 1 $ dimensiones.\n",
+    "\n",
+    "## Continuando\n",
+    "\n",
+    "La hipótesis y los parámetros $ \\theta $... ¿Cómo los ajustamos dado el conjunto de entrenamiento?\n",
+    "\n",
+    "<img src=\"18.png\"></img>\n",
+    "\n",
+    "Antes, cuando estábamos desarrollando el modelo de regresión lineal, usábamos la función de costos. Y pues, no usaremos un algoritmo de optimización muy distinto, de hecho, es bastante similar en términos de la convergencia, puesto la fórmula varía.\n",
+    "\n",
+    "<img src=\"19.png\"></img>\n",
+    "\n",
+    "La forma alternativa a esta función de costos la definimos:\n",
+    "\n",
+    "<img src=\"20.png\"></img>\n",
+    "\n",
+    "La interpretación de esta función de costo es que queremos que el algoritmo de aprendizaje tenga que <i>pagar o asumir</i> si las salidas de la función no se acercan a los valores reales de $ Y $.\n",
+    "\n",
+    "## El problema de la no linealidad de la hipótesis\n",
+    "\n",
+    "Tal como definimos para la regresión lineal, la definición de la función del costo era la mitad del cuadrado de la diferencia entre el valor predicho por la hipótesis $ h_ \\theta (X) $ y el valor real de $ Y $.\n",
+    "\n",
+    "Aquella función de costos funcionó bien para la regresión lineal, pero ahora estamos interesados en la regresión logística, por lo que, si pudiéramos minimizar esta función de costo particular (considerando la función sigmoide), sucedería que la función <b>no sería convexa</b>, resultando en que el descenso del gradiente no funcionase bien, puesto habrían demasiados mínimos locales, pudiendo no converger correctamente al mínimo global.\n",
+    "\n",
+    "Al referirnos a que la función de costo no sea convexa, es que la función $ h_ \\theta (X) $ no tiene linearidad, por lo que al colocar $ h_ \\theta (X) $ en la función de costos y la graficamos, $ J(\\theta) $ se vería de la siguiente manera:\n",
+    "\n",
+    "<img src=\"21.png\"></img>\n",
+    "\n",
+    "Es decir, tendría muchos mínimos locales, por lo que si iniciáramos el desscenso del gradiente sobre esta función, no habría garantía de que convergiese al mínimo global.\n",
+    "\n",
+    "En contraste, a lo que nos gustaría como una función de costos $ J(\\theta) $ es que fuera <b>convexa</b> (con forma de bowl), de forma que al arrancar el descenso del gradiente convergiese al mínimo global.\n",
+    "\n",
+    "<img src=\"22.png\"></img>\n",
+    "\n",
+    "Sin embargo, el gran problema de ocupar esta función de costos es que debido a esta hipótesis ampliamente no lineal, $ J(\\theta) $ termina siendo una función convexa. Por lo que nos gustaría formular otra función de costos distinta, que sí fuese convexa. De esta forma, <b>tendríamos garantías de que se encontrase el mínimo global</b>.\n",
+    "\n",
+    "## Primer acercamiento a la función de costo para la función sigmoide\n",
+    "\n",
+    "Ahora sí, tras ver las problemáticas de aplicar la función de costos de la regresión lineal, a la regresión logística, veremos entonces la función de costos a esta última.\n",
+    "\n",
+    "<img src=\"23.png\"></img>\n",
+    "\n",
+    "Diremos que el costo o la penalidad que el algoritmo paga es el costo asociado al valor predicho $ h_ \\theta (X) $ con su valor real:\n",
+    "\n",
+    "- Siendo el logaritmo negativo de la hipótesis si $ Y = 1 $.\n",
+    "\n",
+    "- O el logaritmo negativo de la diferencia entre $ 1 $ y la hipótesis si $ Y = 0 $.\n",
+    "\n",
+    "Graficaremos esta función para tener cierta intuición de lo que hace esta función. Empezaremos con el caso $ Y = 1 $.\n",
+    "\n",
+    "<img src=\"24.png\"></img>\n",
+    "\n",
+    "Una forma de comprender por qué el gráfico es así, es porque si tuviéramos que graficar el logaritmo de Z, con Z en el eje horizontal, se vería así:\n",
+    "\n",
+    "<img src=\"25.png\"></img>\n",
+    "\n",
+    "Dado que solo nos interesa el intervalo entre 0 y 1 (y que no sea negativo), entonces se le antepone el signo negativo a la función y nos quedamos solo con el intervalo $ [0, 1] $.\n",
+    "\n",
+    "## Propiedades para $ Y = 0 $ o $ Y = 1 $\n",
+    "\n",
+    "Esta función de costos, en particular, tiene propiedades interesantes y atractivas:\n",
+    "\n",
+    "- El costo es cero si $ Y = 1 $ y $ h_ \\theta (X) = 1$: $ COST = 0 $ IF $ Y = 0 $ AND $ h_ \\theta (X) = 1$.\n",
+    "\n",
+    "- Si $ Y = 1 $ y $ h_ \\theta (X) \\to 0$, entonces el costo es infinito: $ COST = \t\\infty $ IF $ Y = 1 $ AND $ h_ \\theta (X) = 0$.\n",
+    "\n",
+    "## Resumen de la función de costo (hasta ahora)\n",
+    "\n",
+    "En este punto, definimos la función de costo para un simple ejemplo de entrenamiento. El tópico de convexividad es posible profundizarlo aún más, siendo posible demostrar que con una elección particular de una función de costo nos dará solución a la problemática de la no linealidad.\n",
+    "\n",
+    "En general, la función de costo $ J(\\theta) debe ser convexa y óptima para obtener el mínimo global.\n",
+    "\n",
+    "En el siguiente punto, tomaremos estas ideas vistas, y las llevaremos un poco más lejos, definiendo la función de costos para el conjunto de entrenamiento completo. \n",
+    "\n",
+    "También, nos daremos cuenta que existe una manera simple y acotada de escribir la función de costo, basado en el algoritmo del descenso del gradiente.\n",
+    "\n",
+    "## La función de costo simplificada y el descenso del gradiente"
    ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [],
    "cell_type": "markdown",
    "metadata": {}
   }
